// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VotesFilter should render 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="cursor-pointer"
        >
          <div
            class="sc-bdfBwQ iyevwF"
            height="20"
            width="20"
          >
            <svg>
              filters.svg
            </svg>
          </div>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter should render default 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="cursor-pointer"
        >
          <div
            class="sc-bdfBwQ iyevwF"
            height="20"
            width="20"
          >
            <svg>
              filters.svg
            </svg>
          </div>
        </div>
      </span>
      <div
        class="absolute z-10 py-3 mt-3 rounded-lg shadow-xl opacity-0 Dropdown__Wrapper-ocz1je-0 fjgGxm "
        data-testid="dropdown__content"
        style="opacity: 100; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="py-4 px-6 w-64"
          >
            <label
              class="block flex items-center px-2 pb-1 space-x-3 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              data-testid="VotesFilter__option--all"
            >
              <span>
                <input
                  checked=""
                  class="rounded-lg Checkbox-sc-17gwqiq-0 iGvDni"
                  color="success"
                  name="all"
                  type="checkbox"
                />
              </span>
              <span>
                All
              </span>
            </label>
            <label
              class="block flex items-center px-2 pb-1 space-x-3 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              data-testid="VotesFilter__option--current"
            >
              <span>
                <input
                  class="rounded-lg Checkbox-sc-17gwqiq-0 iGvDni"
                  color="success"
                  name="current"
                  type="checkbox"
                />
              </span>
              <span
                class="pt-px"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter should render with current option selected 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="cursor-pointer"
        >
          <div
            class="sc-bdfBwQ iyevwF"
            height="20"
            width="20"
          >
            <svg>
              filters.svg
            </svg>
          </div>
        </div>
      </span>
      <div
        class="absolute z-10 py-3 mt-3 rounded-lg shadow-xl opacity-0 Dropdown__Wrapper-ocz1je-0 fjgGxm "
        data-testid="dropdown__content"
        style="opacity: 100; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="py-4 px-6 w-64"
          >
            <label
              class="block flex items-center px-2 pb-1 space-x-3 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              data-testid="VotesFilter__option--all"
            >
              <span>
                <input
                  class="rounded-lg Checkbox-sc-17gwqiq-0 iGvDni"
                  color="success"
                  name="all"
                  type="checkbox"
                />
              </span>
              <span>
                All
              </span>
            </label>
            <label
              class="block flex items-center px-2 pb-1 space-x-3 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              data-testid="VotesFilter__option--current"
            >
              <span>
                <input
                  checked=""
                  class="rounded-lg Checkbox-sc-17gwqiq-0 iGvDni"
                  color="success"
                  name="current"
                  type="checkbox"
                />
              </span>
              <span
                class="pt-px"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter should render with disabled current option 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="cursor-pointer"
        >
          <div
            class="sc-bdfBwQ iyevwF"
            height="20"
            width="20"
          >
            <svg>
              filters.svg
            </svg>
          </div>
        </div>
      </span>
      <div
        class="absolute z-10 py-3 mt-3 rounded-lg shadow-xl opacity-0 Dropdown__Wrapper-ocz1je-0 fjgGxm "
        data-testid="dropdown__content"
        style="opacity: 100; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="py-4 px-6 w-64"
          >
            <label
              class="block flex items-center px-2 pb-1 space-x-3 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              data-testid="VotesFilter__option--all"
            >
              <span>
                <input
                  checked=""
                  class="rounded-lg Checkbox-sc-17gwqiq-0 iGvDni"
                  color="success"
                  name="all"
                  type="checkbox"
                />
              </span>
              <span>
                All
              </span>
            </label>
            <label
              class="block flex items-center px-2 pb-1 space-x-3 rounded-md text-theme-secondary-400"
              data-testid="VotesFilter__option--current"
            >
              <span>
                <input
                  class="rounded-lg Checkbox-sc-17gwqiq-0 iGvDni"
                  color="success"
                  disabled=""
                  name="current"
                  type="checkbox"
                />
              </span>
              <span
                class="pt-px"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
